# fb2rename

./: pyproject.toml
fb2rename/: __init__.py  fb2rename.py
